--- a/bili/error/enum.Error.html
+++ b/bili/error/enum.Error.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="refresh" content="0;URL=../../bili/enum.Error.html">
+    <title>Redirection</title>
 </head>
 <body>
     <p>Redirecting to <a href="../../bili/enum.Error.html">../../bili/enum.Error.html</a>...</p>
