--- a/bili/error/type.Result.html
+++ b/bili/error/type.Result.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="refresh" content="0;URL=../../bili/type.Result.html">
+    <title>Redirection</title>
 </head>
 <body>
     <p>Redirecting to <a href="../../bili/type.Result.html">../../bili/type.Result.html</a>...</p>
